--- a/config.yml
+++ b/config.yml
@@ -35,6 +35,7 @@ params:
   ShowWordCount: true
   ShowRssButtonInSectionTermList: false
   ShowAllPagesInArchive: true
+  ShowPageNums: true
   UseHugoToc: false
   disableSpecial1stPost: false
   disableScrollToTop: false
@@ -106,32 +107,32 @@ menu:
   main:
     - identifier: search
       # name: 搜索
-      pre: 21
+      pre: search
       url: /search/
       weight: 40
     - identifier: home
       name: 主页
-      pre: 36
+      pre: home
       url: /
       weight: 1
     - identifier: posts
       name: 文章
-      pre: 37
+      pre: book
       url: /posts/
       weight: 2
     - identifier: series
       name: 系列
-      pre: 35
+      pre: books
       url: /series/
       weight: 3
     - identifier: tags
       name: 标签
-      pre: 23
+      pre: tags
       url: /tags/
       weight: 20
     - identifier: archives
       name: 归档
-      pre: 34
+      pre: folder
       url: /archives/
       weight: 30
 
